--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,29 @@ body {
 
 }
 
+h1 {
+    box-shadow: 3px 7px 31px -10px #f00;
+    padding: 20px;
+    border-top-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-bottom: 2px solid #333;
+    border-left: 2px solid #333;
+    animation-name: palpitar;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+@keyframes palpitar {
+    from {
+        box-shadow: 0px 0px 0px 0px #f00;
+    }
+
+    to {
+        box-shadow: 3px 7px 31px -10px #f00;
+    }
+}
+
 /* -------------- PRIMERA CARTA ------------------- */
 
 .carta-1 {
@@ -62,9 +85,9 @@ body {
 /* -------------- SEGUNDA CARTA ------------------- */
 
 .carta-2 {
-    margin-top: 50px;
+    margin-top: 70px;
     max-width: 830px;
-    height: 620px;
+    height: 730px;
     box-shadow: 3px 7px 81px -10px rgba(0,0,0,0.75);
     font-family: sans-serif;
     display: flex;
@@ -75,14 +98,14 @@ body {
 .carta-2__primera-parte {
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 25px;
 }
 
 .carta-2__primera-parte div {
     display: flex;
     flex-direction: column;
     align-items: start;
-    margin-right: 20px;
+    margin-top: 10px;
 }
 
 .carta-2__primera-parte h2 {
@@ -106,9 +129,40 @@ body {
     line-height: 22px;
 }
 
+.carta-2__primera-parte img {
+    height: 300px;
+}
+
+img[src="img/img__carta-2/imagen2.png"]{
+    margin-top: 100px;
+}
+
 .carta-2__segunda-parte {
     display: flex;
     justify-content: center;
     gap: 25px;
-    margin-top: 50px;
+    margin-top: 60px;
+}
+
+.carta-2 img {
+    border-radius: 10px;
+}
+
+.carta-2__numero {
+    color: #bbb;
+    font-size: 25px;
+    font-weight: 500;
+}
+
+/* -------------- TERCERA CARTA ------------------- */
+
+.carta-3 {
+    margin-top: 70px;
+    box-shadow: 3px 7px 81px -10px rgba(0,0,0,0.75);
+    padding: 30px;
+    padding-top: 50px;
+}
+
+.carta-3 div {
+
 }
