--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
     box-sizing: border-box;
     align-items: center;
     flex-direction: column;
+    font-family: sans-serif;
 
 }
 
@@ -157,12 +158,81 @@ img[src="img/img__carta-2/imagen2.png"]{
 /* -------------- TERCERA CARTA ------------------- */
 
 .carta-3 {
+    width: 800px;
     margin-top: 70px;
     box-shadow: 3px 7px 81px -10px rgba(0,0,0,0.75);
     padding: 30px;
     padding-top: 50px;
 }
 
-.carta-3 div {
+.carta-3 > div {
+    display: flex;
+    margin-bottom: 50px;
+    gap: 82px;
+}
 
+.carta-3 h2 {
+    font-size: 52px;
+    margin-top: 5px;
+}
+
+.carta-3__parte {
+    width: 40%;
+}
+
+.carta-3__parte {
+    color: #777;
+    line-height: 24px;
+}
+
+.carta-3__parte button {
+    border: none;
+    background-color: #333;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 10px;
+}
+
+.carta-3 img {
+    width: 100%;
+}
+
+/* -------------- CUARTA CARTA ------------------- */
+
+.carta-4 {
+    margin-top: 100px;
+    display: flex;
+    gap: 70px;
+    box-shadow: 3px 7px 81px -10px rgba(0,0,0,0.75);
+    padding-top: 50px;
+    width: 920px;
+}
+
+.carta-4 > div {
+    width: 33%;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+} 
+
+.carta-4 h2 {
+    font-size: 40px;
+    margin-top: 0;
+}
+
+.carta-4 p {
+    line-height: 22px;
+    color: #777;
+}
+
+.carta-4__primera-parte button {
+    color: #fff;
+    background-color: #333;
+    border: none;
+    padding: 10px 30px;
+    border-radius: 10px;
+}
+
+.carta-4__segunda-parte {
+    
 }
