--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     box-sizing: border-box;
     align-items: center;
     flex-direction: column;
-    font-family: sans-serif;
+    font-family: avenir;
 
 }
 
@@ -35,17 +35,16 @@ h1 {
 .carta-1 {
     margin-top: 50px;
     max-width: 1000px;
-    height: 790px;
+    height: 810px;
     box-shadow: 3px 7px 81px -10px rgba(0,0,0,0.75);
     text-align: center;
-    font-family: sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 .carta-1 h2 {
-    width: 50%;
+    width: 40%;
     font-size: 2.5rem;
     line-height: 60px;
     margin-bottom: 5px;
@@ -55,10 +54,10 @@ h1 {
 .carta-1 p {
     width: 50%;
     color: #000a;
-    line-height: 22px;
+    line-height: 30px;
     margin-top: 0px;
     font-weight: 500;
-    font-size: 15px;
+    font-size: 20px;
 }
 
 .carta-1 button {
@@ -90,7 +89,6 @@ h1 {
     max-width: 830px;
     height: 730px;
     box-shadow: 3px 7px 81px -10px rgba(0,0,0,0.75);
-    font-family: sans-serif;
     display: flex;
     flex-direction: column;
     padding: 40px;
@@ -125,7 +123,6 @@ h1 {
 }
 
 .carta-2__primera-parte p {
-    font-family: sans-serif;
     color: #555;
     line-height: 22px;
 }
@@ -205,18 +202,19 @@ img[src="img/img__carta-2/imagen2.png"]{
     gap: 70px;
     box-shadow: 3px 7px 81px -10px rgba(0,0,0,0.75);
     padding-top: 50px;
-    width: 900px;
+    width: 920px;
+    height: 620px;
 }
 
 .carta-4 > div {
     width: 35%;
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 30px;
 } 
 
 .carta-4 h2 {
-    font-size: 40px;
+    font-size: 45px;
     margin: 20px 0;
 }
 
@@ -246,5 +244,41 @@ img[src="img/img__carta-2/imagen2.png"]{
 
 .carta-5 {
     margin-top: 70px;
-    
+    padding: 50px;
+    padding-bottom: 40px;
+    box-shadow: 3px 7px 81px -10px rgba(0,0,0,0.75);
 }
+
+.carta-5 h2 {
+    font-size: 4rem;
+    width: 50%;
+    margin-top: 0;
+}
+
+.carta-5 > div {
+    display: flex;
+    gap: 45px;
+}
+
+.carta-5 > div > div {
+    width: 300px;
+}
+
+.carta-5 img {
+    width: 300px;
+}
+
+.carta-5 > div > div > div {
+    color: #888;
+    font-size: 25px;
+    font-weight: 900;
+}
+
+.carta-5 p {
+    color: #777;
+    font-size: 1.1rem;
+    margin-top: 0;
+}
+
+/* -------------- SEXTA CARTA ------------------- */
+
