--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,15 @@ body {
     align-items: center;
     flex-direction: column;
     font-family: avenir;
+    background-color: #eee;
+    margin: 0;
+    margin-top: 20px;
 
 }
 
-h1 {
+nav {
+    width: 70%;
+    text-align: center;
     box-shadow: 3px 7px 31px -10px #f00;
     padding: 20px;
     border-top-left-radius: 20px;
@@ -18,6 +23,7 @@ h1 {
     animation-duration: 1s;
     animation-iteration-count: infinite;
     animation-direction: alternate;
+    background-color: #fff;
 }
 
 @keyframes palpitar {
@@ -30,417 +36,41 @@ h1 {
     }
 }
 
-/* -------------- PRIMERA CARTA ------------------- */
-
-.carta-1 {
-    margin-top: 50px;
+.cartas {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
     max-width: 1000px;
-    height: 810px;
-    box-shadow: 3px 7px 81px -10px rgba(0,0,0,0.75);
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.carta-1 h2 {
-    width: 40%;
-    font-size: 2.5rem;
-    line-height: 60px;
-    margin-bottom: 5px;
-    color: #333;
-}
-
-.carta-1 p {
-    width: 50%;
-    color: #000a;
-    line-height: 30px;
-    margin-top: 0px;
-    font-weight: 500;
-    font-size: 20px;
-}
-
-.carta-1 button {
-    padding: 14px 40px;
-    border: none;
-    border-radius: 15px;
-    background-color: #333;
-    color: #fff;
-    font-weight: 100;
-}
-
-.carta-1 div {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
     flex-wrap: wrap;
-    margin-top: 45px;
+    margin: 100px 0;
 }
 
-.carta-1 img {
-    width: 220px;
-    border-radius: 10px;
+.cartas div {
+    padding: 20px;
+    width: 270px;
+    height: 220px;
+    border: 1px solid #ddd;
+    text-align: center;
+    background-color: #fff;
+    border-radius: 5px;
+    transition: box-shadow .3s;
+
 }
 
-/* -------------- SEGUNDA CARTA ------------------- */
-
-.carta-2 {
-    margin-top: 70px;
-    max-width: 830px;
-    height: 730px;
-    box-shadow: 3px 7px 81px -10px rgba(0,0,0,0.75);
-    display: flex;
-    flex-direction: column;
-    padding: 40px;
+.cartas div:hover {
+    box-shadow: 0 0 5px 0 #aaa;
 }
 
-.carta-2__primera-parte {
-    display: flex;
-    justify-content: center;
-    gap: 25px;
+.cartas img {
+    width: 250px;
+    height: 180px;
+    border: 1px solid #aaa;
 }
 
-.carta-2__primera-parte div {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    margin-top: 10px;
-}
-
-.carta-2__primera-parte h2 {
-    font-size: 2rem;
-    color: #333;
-    line-height: 50px;
-    margin-bottom: 0;
-}
-
-.carta-2__primera-parte button {
-    border-radius: 10px;
-    border: none;
+footer {
     background-color: #333;
     color: #fff;
-    padding: 10px 25px ;
-}
-
-.carta-2__primera-parte p {
-    color: #555;
-    line-height: 22px;
-}
-
-.carta-2__primera-parte img {
-    height: 300px;
-}
-
-img[src="img/img__carta-2/imagen2.png"]{
-    margin-top: 100px;
-}
-
-.carta-2__segunda-parte {
-    display: flex;
-    justify-content: center;
-    gap: 25px;
-    margin-top: 60px;
-}
-
-.carta-2 img {
-    border-radius: 10px;
-}
-
-.carta-2__numero {
-    color: #bbb;
-    font-size: 25px;
-    font-weight: 500;
-}
-
-/* -------------- TERCERA CARTA ------------------- */
-
-.carta-3 {
-    width: 800px;
-    margin-top: 70px;
-    box-shadow: 3px 7px 81px -10px rgba(0,0,0,0.75);
-    padding: 30px;
-    padding-top: 50px;
-}
-
-.carta-3 > div {
-    display: flex;
-    margin-bottom: 50px;
-    gap: 82px;
-}
-
-.carta-3 h2 {
-    font-size: 52px;
-    margin-top: 5px;
-}
-
-.carta-3__parte {
-    width: 40%;
-}
-
-.carta-3__parte {
-    color: #777;
-    line-height: 24px;
-}
-
-.carta-3__parte button {
-    border: none;
-    background-color: #333;
-    color: #fff;
-    padding: 10px 20px;
-    border-radius: 10px;
-}
-
-.carta-3 img {
     width: 100%;
-}
-
-/* -------------- CUARTA CARTA ------------------- */
-
-.carta-4 {
-    margin-top: 70px;
-    display: flex;
-    gap: 70px;
-    box-shadow: 3px 7px 81px -10px rgba(0,0,0,0.75);
-    padding-top: 50px;
-    width: 920px;
-    height: 620px;
-}
-
-.carta-4 > div {
-    width: 35%;
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-} 
-
-.carta-4 h2 {
-    font-size: 45px;
-    margin: 20px 0;
-}
-
-.carta-4 p {
-    line-height: 22px;
-    color: #777;
-    margin-top: 0;
-}
-
-.carta-4__primera-parte button {
-    color: #fff;
-    background-color: #333;
-    border: none;
-    padding: 10px 30px;
-    border-radius: 10px;
-    font-size: 11px;
-}
-
-.carta-4__segunda-parte > div > div {
-    color: #777;
-    font-size: 20px;
-    font-weight: 500;
-    margin-top: 30px;
-}
-
-/* -------------- QUINTA CARTA ------------------- */
-
-.carta-5 {
-    margin-top: 70px;
-    padding: 50px;
-    padding-bottom: 40px;
-    box-shadow: 3px 7px 81px -10px rgba(0,0,0,0.75);
-}
-
-.carta-5 h2 {
-    font-size: 4rem;
-    width: 50%;
-    margin-top: 0;
-}
-
-.carta-5 > div {
-    display: flex;
-    gap: 45px;
-}
-
-.carta-5 > div > div {
-    width: 300px;
-}
-
-.carta-5 img {
-    width: 300px;
-}
-
-.carta-5 > div > div > div {
-    color: #888;
-    font-size: 25px;
-    font-weight: 900;
-}
-
-.carta-5 p {
-    color: #777;
-    font-size: 1.1rem;
-    margin-top: 0;
-}
-
-/* -------------- SEXTA CARTA ------------------- */
-
-.carta-6 {
-    margin-top: 70px;
-    box-shadow: 3px 7px 81px -10px rgba(0,0,0,0.75);
-    padding: 50px;
-}
-
-.circle {
-    position: relative;
-    width: 100px;
-    height: 100px;
-}  
-
-.carta-6 span {
-   position: absolute;
-   right: 100px;
-   top: 90px;
-}
-
-.carta-6 span:nth-child(1) {
-    transform: translateY(50px);
-    rotate: -97deg;
-}
-
-.carta-6 span:nth-child(2) {
-    transform: translateY(52px);
-    rotate: -85deg;
-}
-
-.carta-6 span:nth-child(3) {
-    transform: translateY(52px);
-    rotate: -75deg;
-}
-
-.carta-6 span:nth-child(4) {
-    transform: translateY(54px);
-    rotate: -62deg;
-}
-
-.carta-6 span:nth-child(5) {
-    transform: translateY(52px);
-    rotate: -45deg;
-}
-
-.carta-6 span:nth-child(6) {
-    transform: translateY(50px);
-    rotate: -25deg;
-}
-
-.carta-6 span:nth-child(7) {
-    transform: translateY(50px);
-    rotate: -12deg;
-}
-
-.carta-6 span:nth-child(8) {
-    transform: translateY(50px);
-    rotate: 0deg;
-}
-
-.carta-6 span:nth-child(9) {
-    transform: translateY(50px);
-    rotate: 12deg;
-}
-
-.carta-6 span:nth-child(10) {
-    transform: translateY(50px);
-    rotate: 24deg;
-}
-
-.carta-6 span:nth-child(11) {
-    transform: translateY(50px);
-    rotate: 36deg;
-}
-
-.carta-6 span:nth-child(12) {
-    transform: translateY(50px);
-    rotate: 48deg;
-}
-
-.carta-6 span:nth-child(13) {
-    transform: translateY(52px);
-    rotate: 60deg;
-}
-
-.carta-6 span:nth-child(14) {
-    transform: translateY(50px);
-    rotate: 72deg;
-}
-
-.carta-6 span:nth-child(15) {
-    transform: translateY(50px);
-    rotate: 84deg;
-}
-
-.carta-6 span:nth-child(16) {
-    transform: translateY(50px);
-    rotate: 96deg;
-}
-
-.carta-6 span:nth-child(17) {
-    transform: translateY(50px);
-    rotate: 108deg;
-}
-
-.carta-6 span:nth-child(18) {
-    transform: translateY(50px);
-    rotate: 120deg;
-}
-
-.carta-6 span:nth-child(19) {
-    transform: translateY(52px);
-    rotate: 128deg;
-}
-
-.carta-6 span:nth-child(20) {
-    transform: translateY(50px);
-    rotate: 144deg;
-}
-
-.carta-6 span:nth-child(21) {
-    transform: translateY(50px);
-    rotate: 160deg;
-}
-
-.carta-6 span:nth-child(22) {
-    transform: translateY(51px);
-    rotate: 170deg;
-}
-
-.carta-6 span:nth-child(23) {
-    transform: translateY(52px);
-    rotate: 182deg;
-}
-
-.carta-6 span:nth-child(24) {
-    transform: translateY(52px);
-    rotate: 192deg;
-}
-
-.carta-6 span:nth-child(25) {
-    transform: translateY(50px);
-    rotate: 204deg;
-}
-
-.carta-6 span:nth-child(26) {
-    transform: translateY(50px);
-    rotate: 216deg;
-}
-
-.carta-6 span:nth-child(27) {
-    transform: translateY(50px);
-    rotate: 228deg;
-}
-
-.carta-6 span:nth-child(28) {
-    transform: translateY(50px);
-    rotate: 240deg;
-}
-
-.carta-6 span:nth-child(29) {
-    transform: translateY(50px);
-    rotate: 252deg;
+    text-align: center;
+    padding: 10px 0;
 }
