--- a/prototipos/prototipo_6/styles.css
+++ b/prototipos/prototipo_6/styles.css
@@ -3,24 +3,30 @@ body {
     box-sizing: border-box;
     align-items: center;
     flex-direction: column;
-    font-family: sans-serif;
+    font-family: "Playfair Display";
 }
 
 .carta-6 {
     margin-top: 70px;
-    padding: 50px;
+    padding: 70px;
     width: 900px;
     padding-bottom: 40px;
     box-shadow: 3px 7px 81px -10px rgba(0,0,0,0.75);
     display: flex;
+    justify-content: space-between;
 }
 
 .carta-6 h2 {
-    font-size: 2.5rem;
+    font-size: 2.8rem;
+    margin-bottom: 20px;
+}
+
+.carta-6__primera-parte p {
+    color: #333;
 }
 
 img[src="img__carta-6/imagen1.png"] {
-    width: 80px;
+    width: 90px;
     position: relative;
     left: -20px;
 }
@@ -32,3 +38,91 @@ img[src="img__carta-6/imagen1.png"] {
 .carta-6 img[src="img__carta-6/imagen2.jpg"] {
     width: 300px;
 }
+
+button {
+    padding: 10px 30px;
+    font-size: 17px;
+    margin: 10px 0;
+}
+
+.botones {
+    display: flex;
+    gap: 22px;
+}
+
+button:nth-child(1) {
+    background-color: #000;
+    color: #fff;
+    border: none;
+    border-radius: 10px;
+}
+
+button:nth-child(2) {
+    background-color: #fff;
+    color: #000;
+    border: 1px solid #333;
+    border-radius: 10px;
+}
+
+.carta-6__segunda-parte {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    border: 1px solid #333;
+    border-radius: 10px;
+    padding: 10px;
+    margin-top: 40px;
+    left: -20px;
+    width: 450px;
+}
+
+.carta-6__segunda-parte div {
+    width: 72px;
+    font-size: 12px;
+    text-align: justify; margin: 5px;
+}
+
+.carta-6__segunda-parte img {
+    width: 18px;
+}
+
+.carta-6__segunda-parte p {
+    margin: 0;
+}
+
+.carta-6__lado-derecho {
+    display: flex;
+    align-items: center;
+    position: relative;
+    z-index: 100;
+}
+
+.carta-6__lado-derecho img[src="img__carta-6/imagen2.jpg"] {
+    width: 350px;
+    height: 420px;
+    border-radius: 40px;
+}
+
+.carta-6__lado-derecho::before {
+    content: " ";
+    width: 350px;
+    height: 400px;
+    border: 1px solid #000;
+    position: absolute;
+    border-radius: 20px;
+    top: 35px;
+    right: 40px;
+    z-index: 5;
+}
+
+.carta-6__lado-derecho::after {
+    content: " ";
+    width: 250px;
+    height: 300px;
+    border: 1px solid #000;
+    position: absolute;
+    border-radius: 20px;
+    top: -35px;
+    right: -40px;
+    z-index: 5;
+} 
