--- a/prototipos/prototipo_6/styles.css
+++ b/prototipos/prototipo_6/styles.css
@@ -94,13 +94,14 @@ button:nth-child(2) {
     display: flex;
     align-items: center;
     position: relative;
-    z-index: 100;
 }
 
 .carta-6__lado-derecho img[src="img__carta-6/imagen2.jpg"] {
     width: 350px;
     height: 420px;
     border-radius: 40px;
+    position: relative;
+    z-index: 10;
 }
 
 .carta-6__lado-derecho::before {
@@ -109,20 +110,20 @@ button:nth-child(2) {
     height: 400px;
     border: 1px solid #000;
     position: absolute;
-    border-radius: 20px;
+    border-radius: 40px;
     top: 35px;
-    right: 40px;
+    right: 30px;
     z-index: 5;
 }
 
 .carta-6__lado-derecho::after {
     content: " ";
-    width: 250px;
-    height: 300px;
+    width: 220px;
+    height: 350px;
     border: 1px solid #000;
     position: absolute;
-    border-radius: 20px;
-    top: -35px;
-    right: -40px;
+    border-radius: 40px;
+    top: 200px;
+    right: -30px;
     z-index: 5;
 } 
