--- a/prototipos/prototipo_6/styles.css
+++ b/prototipos/prototipo_6/styles.css
@@ -9,6 +9,7 @@ body {
 .carta-6 {
     margin-top: 70px;
     padding: 70px;
+    padding-top: 50px;
     width: 900px;
     padding-bottom: 40px;
     box-shadow: 3px 7px 81px -10px rgba(0,0,0,0.75);
@@ -107,11 +108,11 @@ button:nth-child(2) {
 .carta-6__lado-derecho::before {
     content: " ";
     width: 350px;
-    height: 400px;
+    height: 380px;
     border: 1px solid #000;
     position: absolute;
     border-radius: 40px;
-    top: 35px;
+    top: 40px;
     right: 30px;
     z-index: 5;
 }
@@ -126,4 +127,49 @@ button:nth-child(2) {
     top: 200px;
     right: -30px;
     z-index: 5;
-} 
+}
+
+img[alt="estreya"] {
+    position: absolute;
+    z-index: 20;
+    top: 0px;
+    left: -80px;
+    width: 100px;
+}
+
+img[alt="estreya2"] {
+    position: absolute;
+    z-index: 20;
+    top: 390px;
+    left: 260px;
+}
+
+img[alt="estreya3"] {
+    position: absolute;
+    z-index: 20;
+    top: 120px;
+    left: 20px;
+    scale: .8;
+}
+
+.boton_lila {
+    border: none;
+    color: #fff;
+    position: absolute;
+    z-index: 30;
+    background-color: #685FD4;
+    border-radius: 10px;
+    padding: 12px 20px;
+    font-size: 14px;
+}
+
+.boton_lila--uno {
+    top: 430px;
+    left: -50px;
+    font-size: 18px;
+}
+
+.boton_lila--dos {
+    top: 110px;
+    right: -30px;
+}
