--- a/prototipos/prototipo_11/styles.css
+++ b/prototipos/prototipo_11/styles.css
@@ -9,11 +9,12 @@ body {
 
 .carta-11 {
     width: 780px;
-    height: 470px;
+    height: 490px;
     box-shadow: 3px 7px 81px -10px rgba(0,0,0,0.75);
     padding: 40px;
     display: flex;
     flex-direction: column;
+    padding-top: 60px;
 }
 
 .parte-arriba {
@@ -27,6 +28,8 @@ body {
 
 .parte-arriba__izquierdo {
     width: 330px;
+    position: relative;
+    top: -20px;
 }
 
 .parte-arriba__izquierdo h2 {
@@ -52,7 +55,8 @@ body {
 .parte-abajo {
     background-color: #333;
     border-radius: 20px;
-    padding: 20px;
+    padding: 20px 40px;
+    padding-top: 30px;
     color: #ccc;
     margin-top: 50px;
     display: flex;
@@ -81,7 +85,7 @@ body {
 
 .parte-arriba__derecho img {
     width: 200px;
-    height: 240px;
+    height: 230px;
     object-fit: cover;
     border-top-left-radius: 50%;
     border-top-right-radius: 50%;
@@ -90,7 +94,7 @@ body {
 
 img[alt="imagen1"] {
     position: absolute;
-    top: 0;
+    top: -20px;
     right: 120px;
 }
 
