--- a/prototipos/prototipo_13/styles.css
+++ b/prototipos/prototipo_13/styles.css
@@ -5,10 +5,61 @@ body {
     flex-direction: column;
     font-family: sans-serif;
     padding: 20px;
+    font-family: Times
 }
 
 .carta-13 {
     width: 1080px;
     height: 670px;
     box-shadow: 3px 7px 81px -10px rgba(0,0,0,0.75);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 50px;
+}
+
+.lado-izquierdo {
+    width: 350px;
+}
+
+.estreyas {
+    display: flex;
+}
+
+.estreyas img {
+    width: 150px;
+}
+
+.lado-centro {
+    width: 250px;
+    text-align: center;
+}
+
+.lado-centro h2 {
+    font-size: 80px;
+    font-weight: 100;
+    margin: 20px;
+}
+
+.lado-centro p {
+    margin-bottom: 20px;
+}
+
+.lado-centro button {
+    padding: 12px 35px;
+    border: none;
+    color: #fff;
+    background-color: #111;
+    border-radius: 20px;
+}
+
+.lado-derecho {
+    width: 350px;
+}
+
+img[src="img_carta-13/imagen1.jpg"], img[src="img_carta-13/imagen2.jpg"] {
+    width: 300px;
+    height: 400px;
+    border-top-left-radius: 1000px;
+    border-top-right-radius: 1000px;
 }
