--- a/prototipos/prototipo_13/styles.css
+++ b/prototipos/prototipo_13/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 .carta-13 {
-    width: 1080px;
+    width: 1000px;
     height: 670px;
     box-shadow: 3px 7px 81px -10px rgba(0,0,0,0.75);
     display: flex;
@@ -19,11 +19,18 @@ body {
 }
 
 .lado-izquierdo {
-    width: 350px;
+    width: 300px;
+}
+
+.contenido {
+    width: 300px;
+    color: #777;
+    font-size: 17px;
 }
 
 .estreyas {
     display: flex;
+    position: relative;
 }
 
 .estreyas img {
@@ -39,18 +46,29 @@ body {
     font-size: 80px;
     font-weight: 100;
     margin: 20px;
+    margin-top: 0;
+    line-height: 80px;
 }
 
 .lado-centro p {
     margin-bottom: 20px;
+    font-size: 18px;
+    color: #777;
+    line-height: 25px;
 }
 
 .lado-centro button {
-    padding: 12px 35px;
+    padding: 15px 35px;
     border: none;
     color: #fff;
     background-color: #111;
-    border-radius: 20px;
+    border-radius: 50px;
+    font-size: 18px;
+}
+
+.numero {
+    font-weight: 700;
+    color: #aaa;
 }
 
 .lado-derecho {
@@ -62,4 +80,42 @@ img[src="img_carta-13/imagen1.jpg"], img[src="img_carta-13/imagen2.jpg"] {
     height: 400px;
     border-top-left-radius: 1000px;
     border-top-right-radius: 1000px;
+}
+
+img[src="img_carta-13/estreya2.png"] {
+    width: 140px;
+    height: 140px;
+}
+
+img[alt="estreya"] {
+    width: 200px;
+    height: 250px;
+    position: absolute;
+    right: -70px;
+    top: -10px;
+}
+
+img[alt="estreya1"] {
+    width: 120px;
+    height: 170px;
+    position: relative;
+    top: -30px;
+    right: 25px;
+}
+
+img[alt="estreya3"] {
+    width: 130px;
+    height: 130px;
+    position: relative;
+    top: 50px;
+}
+
+.segunda-estreya {
+    position: relative;
+    top: -20px;
+}
+
+.segundo-contenido {
+    position: relative;
+    top: -20px;
 }
